--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/d7261063d5.js" crossorigin="anonymous"></script>
 
-  <title>Title</title>
+  <title>Portfolio</title>
 </head>
 <body>
 
@@ -82,8 +82,114 @@
             </div>
           </div>
         </div>
-  
-  </header>
+      </header>
+      <!-- HOME -->
+      <div id="home" class="collapse show">
+        <div class="card card-body bg-primary text-white py-5">
+          <h2>Welcome To My Page</h2>
+          <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam illum impedit ducimus dicta et itaque.</p>
+        </div>
+        <div class="card card-body py-5">
+          <h3>My Skills</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta, quas laboriosam modi minima omnis reprehenderit!</p>
+          <hr>
+          <h4>HTML 5</h4>
+          <div class="progress mb-3">
+            <div class="progress-bar bg-success" style="width: 100%">
+            </div>
+          </div>
+          <h4>CSS 3</h4>
+          <div class="progress mb-3">
+            <div class="progress-bar bg-success" style="width: 100%">
+            </div>
+          </div>
+          <h4>JavaScript</h4>
+          <div class="progress mb-3">
+            <div class="progress-bar bg-success" style="width: 90%">
+            </div>
+          </div>
+          <h4>Python</h4>
+          <div class="progress mb-3">
+            <div class="progress-bar bg-success" style="width: 50%">
+            </div>
+          </div>
+          <h4>PHP</h4>
+          <div class="progress mb-3">
+            <div class="progress-bar bg-success" style="width: 40%">
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- RESUME -->
+      <div id="resume" class="collapse">
+        <div class="card card-body bg-success text-white py-5">
+          <h2>My Resume</h2>
+          <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam illum impedit ducimus dicta et itaque.</p>
+        </div>
+
+        <div class="card card-body py-5">
+          <h3>Where Have I Worked</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia nam ipsa velit alias corrupti suscipit!</p>
+          <div class="card-deck">
+            <div class="card">
+              <div class="card-body">
+                <h4 class="card-title">Devmasters</h4>
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eius hic dolores quo unde ullam.</p>
+                <p class="p-2 mb-3 bg-dark text-white">
+                  Position: Full Stack Developer
+                </p>
+                <p class="p-2 mb-3 bg-dark text-white">
+                  Phone: (444) 444-4444
+                </p>
+              </div>
+              <div class="card-footer">
+                <h6 class="text-muted">Dates: 2020 - 2022</h6>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body">
+                <h4 class="card-title">123 Designs</h4>
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eius hic dolores quo unde ullam.</p>
+                <p class="p-2 mb-3 bg-dark text-white">
+                  Position: Web Desinger
+                </p>
+                <p class="p-2 mb-3 bg-dark text-white">
+                  Phone: (444) 666-6666
+                </p>
+              </div>
+              <div class="card-footer">
+                <h6 class="text-muted">Dates: 2020 - 2023</h6>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body">
+                <h4 class="card-title">Web Designer Pros</h4>
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eius hic dolores quo unde ullam.</p>
+                <p class="p-2 mb-3 bg-dark text-white">
+                  Position: Web Designer
+                </p>
+                <p class="p-2 mb-3 bg-dark text-white">
+                  Phone: (333) 444-5353
+                </p>
+              </div>
+              <div class="card-footer">
+                <h6 class="text-muted">Dates: 2020 - 2021</h6>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Footer -->
+      <div id="main-footer" class="p-5 bg-dark text-white">
+        <div class="row">
+          <div class="col-md-6">
+            <a href="#" class="btn btn-outline-light">
+              <i class="fas fa-cloud"></i>Download Resume
+            </a>
+          </div>
+        </div>
+      </div>
   </div>
 
   <!-- Main Jquery -->
@@ -100,8 +206,9 @@
 
   <!-- Custom Script -->
   <script>
-    // 
-    $('#year').text(new Date().getFullYear());
+    $('.port-item').click(function(){
+      $('.collapse').collapse('hide');
+    })
   </script>
   
 </body>
