--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/d7261063d5.js" crossorigin="anonymous"></script>
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css" integrity="sha512-Velp0ebMKjcd9RiCoaHhLXkR1sFoCCWXNp6w4zj1hfMifYB5441C+sKeBl/T/Ka6NjBiRfBBQRaQq65ekYz3UQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />  
+
   <title>Portfolio</title>
 </head>
 <body>
@@ -180,6 +182,108 @@
           </div>
         </div>
       </div>
+
+      <!-- WORK -->
+      <div id="work" class="collapse">
+        <div class="card card-body bg-warning text-white py-5">
+          <h2>My Work</h2>
+          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+        </div>
+        <div class="card card-body py-5">
+          <h3>What Have I Built?</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse ducimus deleniti exercitationem neque magnam totam veritatis modi officia beatae debitis.</p>
+          <div class="row no-gutters">
+            <div class="col-md-3">
+              <a href="https://unsplash.it/1200/768.jpg?image=252" data-toggle="lightbox">
+                <img src="https://unsplash.it/1200/768.jpg?image=252" alt="" class="img-fluid">
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a href="https://unsplash.it/1200/768.jpg?image=253" data-toggle="lightbox">
+                <img src="https://unsplash.it/1200/768.jpg?image=253" alt="" class="img-fluid">
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a href="https://unsplash.it/1200/768.jpg?image=254" data-toggle="lightbox">
+                <img src="https://unsplash.it/1200/768.jpg?image=254" alt="" class="img-fluid">
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a href="https://unsplash.it/1200/768.jpg?image=255" data-toggle="lightbox">
+                <img src="https://unsplash.it/1200/768.jpg?image=255" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
+          <div class="row no-gutters">
+            <div class="col-md-3">
+              <a href="https://unsplash.it/1200/768.jpg?image=256" data-toggle="lightbox">
+                <img src="https://unsplash.it/1200/768.jpg?image=256" alt="" class="img-fluid">
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a href="https://unsplash.it/1200/768.jpg?image=257" data-toggle="lightbox">
+                <img src="https://unsplash.it/1200/768.jpg?image=257" alt="" class="img-fluid">
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a href="https://unsplash.it/1200/768.jpg?image=258" data-toggle="lightbox">
+                <img src="https://unsplash.it/1200/768.jpg?image=258" alt="" class="img-fluid">
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a href="https://unsplash.it/1200/768.jpg?image=259" data-toggle="lightbox">
+                <img src="https://unsplash.it/1200/768.jpg?image=259" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- CONTACT -->
+      <div id="contact" class="collapse">
+        <div class="card card-body bg-danger text-white py-5">
+          <h2>Contact</h2>
+          <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, ex.
+          </p>
+        </div>
+        <div class="card card-body py-5">
+          <h3>Get In Touch</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, eum?</p>
+          <form>
+            <div class="form-group">
+              <div class="input-group input-group-lg">
+                <div class="input-group-prepend">
+                  <span class="input-group-text bg-danger text-white">
+                    <i class="fas fa-user"></i>
+                  </span>
+                </div>
+                <input type="text" placeholder="Name" class="form-control bg-dark text-white">
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="input-group input-group-lg">
+                <div class="input-group-prepend">
+                  <span class="input-group-text bg-danger text-white">
+                    <i class="fas fa-envelope"></i>
+                  </span>
+                </div>
+                <input type="email" placeholder="Email" class="form-control bg-dark text-white">
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="input-group input-group-lg">
+                <div class="input-group-prepend">
+                  <span class="input-group-text bg-danger text-white">
+                    <i class="fas fa-pencil-alt"></i>
+                  </span>
+                </div>
+                <textarea placeholder="Message" class="form-control bg-dark text-white"></textarea>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+
       <!-- Footer -->
       <div id="main-footer" class="p-5 bg-dark text-white">
         <div class="row">
@@ -203,12 +307,18 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
   crossorigin="anonymous"></script>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js" integrity="sha512-Y2IiVZeaBwXG1wSV7f13plqlmFOx8MdjuHyYFVoYzhyRr3nH/NMDjTBSswijzADdNzMyWNetbLMfOpIPl6Cv9g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> 
+
 
   <!-- Custom Script -->
   <script>
     $('.port-item').click(function(){
       $('.collapse').collapse('hide');
     })
+    $(document).on('click','[data-toggle="lightbox"]', function(e){
+      e.preventDefault();
+      $(this).ekkoLightbox();
+    });
   </script>
   
 </body>
